Notes Controller, seeds, model and tests
