# app/Http/Requests/AddNoteRequest.php
@@ -1,0 +1,33 @@
+<?php
+
+namespace App\Http\Requests;
+
+use Illuminate\Foundation\Http\FormRequest;
+
+class AddNoteRequest extends FormRequest
+{
+    /**
+     * Determine if the user is authorized to make this request.
+     *
+     * @return bool
+     */
+    public function authorize(): bool
+    {
+        return true;
+    }
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array<string, mixed>
+     */
+    public function rules(): array
+    {
+        return [
+            'notes' => 'array | required',
+            'notes.*.description' => 'required',
+            'notes.*.user_id' => 'int | nullable',
+            'notes.*.restaurant_id' => 'int | nullable',
+        ];
+    }
+}
